--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.palmcampusmarket_client.LoginActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name="com.example.palmcampusmarket_client.RegisterActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name="com.example.palmcampusmarket_client.PasswordActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
     </application>
 
 </manifest>
