--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,11 @@
             android:theme="@style/AppTheme" >
         </activity>
         <activity
-            android:name="com.example.palmcampusmarket_client.PasswordActivity"
+            android:name="com.example.palmcampusmarket_client.PasswordRecoverActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name="com.example.palmcampusmarket_client.HelloActivity"
             android:theme="@style/AppTheme" >
         </activity>
     </application>
