--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,7 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.palmcampusmarket_client.LoginActivity"/>
+        <activity
+            android:name="com.example.palmcampusmarket_client.LoginActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name="com.example.palmcampusmarket_client.RegisterActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name="com.example.palmcampusmarket_client.PasswordRecoverActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name="com.example.palmcampusmarket_client.HelloActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
     </application>
 
 </manifest>
