我的收藏和搜索整合登陆

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,10 +26,10 @@
         </activity>
         <activity android:name="com.example.palmcampusmarket_client.HelloActivity" />
         <activity android:name="com.example.palmcampusmarket_client.LoginActivity" />
-        <activity android:name="com.example.palmcampusmarket_client.CollectionsActivity" />
+        <activity android:name="com.example.palmcampusmarket_client.collect.CollectionsActivity" />
         <activity android:name="com.example.palmcampusmarket_client.PasswordRecoverActivity" />
         <activity android:name="com.example.palmcampusmarket_client.RegisterActivity" />
-        <activity android:name="com.example.palmcampusmarket_client.SearchActivity" />
+        <activity android:name="com.example.palmcampusmarket_client.collect.SearchActivity" />
         <activity android:name="com.example.palmcampusmarket_client.EvaluationActivity" />
         <activity android:name="com.example.palmcampusmarket_client.NewCommodityActivity" />
         <activity android:name="com.example.palmcampusmarket_client.HomePageActivity" />
