--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=branch 'master' of https\://github.com/DGUT-Asiasoft-2013/client_wuwuwu.git
 eclipse.preferences.version=1
+encoding//src/com/example/palmcampusmarket_client/fragment/pages/HomeListFragment.java=UTF-8
 encoding/<project>=UTF-8
-<<<<<<< HEAD
-=======
 separateDerivedEncodings=true
->>>>>>> branch 'master' of https://github.com/DGUT-Asiasoft-2013/client_wuwuwu.git
