--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,7 +37,9 @@
         <activity android:name="com.example.palmcampusmarket_wallet.MyBillActivity" />
         <activity android:name="com.example.palmcampusmarket_wallet.RechargeActivity" />
         <activity android:name="com.example.palmcampusmarket_client.PurchaseActivity" />
-        <activity android:name="com.example.palmcampusmarket_client.collect.CommodityContentActivity" />
+        <activity android:name="com.example.palmcampusmarket_wallet.SettingActivity"/>
+        <activity android:name="com.example.palmcampusmarket_wallet.ImageShower"
+            android:theme="@style/ImageScale"/>
     </application>
 
 </manifest>
