--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,12 +12,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.palmcampusmarket_client.MainActivity"
-            android:label="@string/app_name" >
+            android:label="掌上理工" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
