--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity android:name="com.example.palmcampusmarket_wallet.RechargeActivity" />
         <activity android:name="com.example.palmcampusmarket_client.PurchaseActivity" />
         <activity android:name="com.example.palmcampusmarket_wallet.SettingActivity"/>
+        
+        <activity android:name="com.example.palmcampusmarket_client.collect.NewNeedActivity" />
         <activity android:name="com.example.palmcampusmarket_wallet.ImageShower"
             android:theme="@style/ImageScale"/>
 
