--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,10 +38,13 @@
         <activity android:name="com.example.palmcampusmarket_wallet.MyBillActivity" />
         <activity android:name="com.example.palmcampusmarket_wallet.RechargeActivity" />
         <activity android:name="com.example.palmcampusmarket_client.PurchaseActivity" />
-        <activity android:name="com.example.palmcampusmarket_wallet.SettingActivity"/>        
+        <activity android:name="com.example.palmcampusmarket_client.setting.SettingActivity" />
+        <activity android:name="com.example.palmcampusmarket_client.setting.AddressContentActivity" />
+        <activity android:name="com.example.palmcampusmarket_client.setting.NewAddressActivity" />
         <activity android:name="com.example.palmcampusmarket_client.collect.NewNeedActivity" />
-        <activity android:name="com.example.palmcampusmarket_wallet.ImageShower"
-            android:theme="@style/ImageScale"/>
+        <activity
+            android:name="com.example.palmcampusmarket_wallet.ImageShower"
+            android:theme="@style/ImageScale" />
     </application>
 
 </manifest>
