--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,9 +38,11 @@
         <activity android:name="com.example.palmcampusmarket_wallet.MyBillActivity" />
         <activity android:name="com.example.palmcampusmarket_wallet.RechargeActivity" />
         <activity android:name="com.example.palmcampusmarket_client.PurchaseActivity" />
-        <activity android:name="com.example.palmcampusmarket_wallet.SettingActivity"/>        
+        <activity android:name="com.example.palmcampusmarket_wallet.SettingActivity" />
         <activity android:name="com.example.palmcampusmarket_client.collect.NewNeedActivity" />
-        <activity android:name="com.example.palmcampusmarket_wallet.ImageShower"
+        <activity android:name="com.example.palmcampusmarket_wallet.ImageShower" />
+        <activity android:name="com.example.palmcampusmarket_client.collect.CollectionsActivity" />
+        <activity android:name="com.example.palmcampusmarket_client.collect.NeedContentActivity" />
             android:theme="@style/ImageScale"/>
     </application>
 
