--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name="com.example.palmcampusmarket_wallet.RechargeActivity" />
         <activity android:name="com.example.palmcampusmarket_client.PurchaseActivity" />
         <activity android:name="com.example.palmcampusmarket_client.setting.SettingActivity" />
+        <activity android:name="com.example.palmcampusmarket_client.setting.AddressListActivity" />
         <activity android:name="com.example.palmcampusmarket_client.setting.AddressContentActivity" />
         <activity android:name="com.example.palmcampusmarket_client.setting.NewAddressActivity" />
         <activity android:name="com.example.palmcampusmarket_client.collect.NewNeedActivity" />
