我的需求列表

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name="com.example.palmcampusmarket_client.collect.CollectionsActivity" />
         <activity android:name="com.example.palmcampusmarket_client.collect.NeedContentActivity" />
         <activity android:name="com.example.palmcampusmarket_client.collect.EditNeedActivity" />
+        <activity android:name="com.example.palmcampusmarket_client.collect.MyNeedsActivity" />
         <activity
             android:name="com.example.palmcampusmarket_wallet.ImageShower"
             android:theme="@style/ImageScale" />
